Basic CourseController with testing (#4)
