# src/main/kotlin/com/freecourses/controller/CoursesController.kt
@@ -1,56 +1,38 @@
 package com.freecourses.controller
 
+import com.freecourses.api.CoursesApi
 import com.freecourses.model.Course
 import com.freecourses.model.CourseDifficulty
 import com.freecourses.model.CreateCourseRequest
-import com.freecourses.model.mappers.CourseMapper
-import com.freecourses.persistence.CoursesRepository
+import com.freecourses.model.ListCoursesResponse
+import com.freecourses.service.CoursesService
+import org.springframework.beans.factory.annotation.Autowired
 import org.springframework.http.ResponseEntity
-import org.springframework.validation.annotation.Validated
-import org.springframework.web.bind.annotation.*
+import org.springframework.web.bind.annotation.RequestMapping
+import org.springframework.web.bind.annotation.RestController
+import java.net.URLDecoder
 import java.util.*
 
 @RestController
-@RequestMapping("/v1/courses")
-class CoursesController(private val coursesRepository: CoursesRepository) {
-    private val courseMapper = CourseMapper.INSTANCE
-
-    @CrossOrigin
-    @GetMapping(path = ["/{courseId}"], produces = ["application/json"])
-    fun getCourse(@Validated @PathVariable courseId: UUID): ResponseEntity<Course> {
-        return ResponseEntity.ok(courseMapper.toCourse(
-            coursesRepository.getCourse(courseId)
-        ));
+@RequestMapping("/v1")
+class CoursesController(@Autowired private val coursesService: CoursesService): CoursesApi {
+    override fun createCourse(createCourseRequest: CreateCourseRequest): ResponseEntity<Course> {
+        return ResponseEntity.ok(coursesService.createCourse(createCourseRequest))
     }
 
-    @CrossOrigin
-    @GetMapping(produces = ["application/json"])
-    fun getCourses(
-        @RequestParam category: String,
-        @RequestParam(required = false) subcategory: String?,
-        @RequestParam(required = false) difficulty: CourseDifficulty?
-    ): ResponseEntity<List<Course>> {
-        if (subcategory == null) {
-            return ResponseEntity.ok(courseMapper.toCourseList(
-                coursesRepository.getCourses(category)
-            ));
-        }
-        if (difficulty == null) {
-            return ResponseEntity.ok(courseMapper.toCourseList(
-                    coursesRepository.getCourses(category, subcategory)
-            ));
-        }
-        return ResponseEntity.ok(
-            courseMapper.toCourseList(coursesRepository.getCourses(
-                    category, subcategory, difficulty)
-            ));
+    override fun getCourseById(courseId: UUID): ResponseEntity<Course> {
+        return ResponseEntity.ok(coursesService.getCourse(courseId))
     }
 
-    @CrossOrigin
-    @PostMapping(produces = ["application/json"])
-    fun createCourse(@Validated @RequestBody createCourseRequest: CreateCourseRequest): ResponseEntity<Course> {
-        val course = courseMapper.toCourseDO(createCourseRequest)
-        coursesRepository.createCourse(course)
-        return ResponseEntity.ok(courseMapper.toCourse(course))
+    override fun listCourses(
+        category: String,
+        subcategory: String?,
+        maxCourses: Int?,
+        difficulty: CourseDifficulty?,
+        nextPageToken: String?
+    ): ResponseEntity<ListCoursesResponse> {
+        val pageSize: Int = maxCourses ?: 50
+        val nextPageTokenBytes = nextPageToken?.let { Base64.getDecoder().decode(URLDecoder.decode(it, Charsets.UTF_8)) }
+        return ResponseEntity.ok(coursesService.getCourses(category, subcategory, difficulty, pageSize, nextPageTokenBytes))
     }
 }
