# src/main/kotlin/com/freecourses/model/exceptions/CourseNotFoundException.kt
@@ -1,0 +1,5 @@
+package com.freecourses.model.exceptions
+
+import java.util.*
+
+class CourseNotFoundException(val courseId: UUID, message: String) : RuntimeException(message)
