# src/main/kotlin/com/freecourses/persistence/model/CourseDO.kt
@@ -2,7 +2,10 @@ package com.freecourses.persistence.model
 
 import com.freecourses.model.CourseDifficulty
 import com.freecourses.model.CourseSource
-import software.amazon.awssdk.enhanced.dynamodb.mapper.annotations.*
+import software.amazon.awssdk.enhanced.dynamodb.mapper.annotations.DynamoDbBean
+import software.amazon.awssdk.enhanced.dynamodb.mapper.annotations.DynamoDbPartitionKey
+import software.amazon.awssdk.enhanced.dynamodb.mapper.annotations.DynamoDbSecondaryPartitionKey
+import software.amazon.awssdk.enhanced.dynamodb.mapper.annotations.DynamoDbSecondarySortKey
 import java.net.URI
 import java.util.*
 
@@ -11,44 +14,24 @@ data class CourseDO(
     @get:DynamoDbPartitionKey
     var id: UUID? = null,
     var category: String? = null,
-    @get:DynamoDbSortKey
     @get:DynamoDbSecondaryPartitionKey(indexNames = [INDEX_NAME])
-    var sortKey: String? = null,
+    var partitionKey: String? = null,
     var description: String? = null,
     var uri: URI? = null,
     var subcategories: List<String> = ArrayList<String>(),
     var source: CourseSource? = null,
     var difficulty: CourseDifficulty? = null
 ) {
-    init {
-        this.sortKey = Optional.ofNullable(sortKey).orElse(category)
-    }
 
     @get:DynamoDbSecondarySortKey(indexNames = [INDEX_NAME])
     var csGsiSk: String? = null
-        set(value) {
-            field = value
-        }
+
+    init {
+        this.partitionKey = Optional.ofNullable(partitionKey).orElse(category)
+        this.csGsiSk = "${difficulty}#${id}"
+    }
 
     companion object {
         const val INDEX_NAME = "category-subcategory-index"
-//        class UUIDToStringConverter: AttributeConverter<UUID> {
-//
-//            override fun transformFrom(input: UUID?): AttributeValue {
-//                return AttributeValue.builder().s(input.toString()).build()
-//            }
-//
-//            override fun transformTo(input: AttributeValue?): UUID {
-//                return UUID.fromString(input?.s())
-//            }
-//
-//            override fun type(): EnhancedType<UUID> {
-//                return EnhancedType.of(UUID::class.java)
-//            }
-//
-//            override fun attributeValueType(): AttributeValueType {
-//                return AttributeValueType.S
-//            }
-//        }
     }
 }
