# src/resources/api.yml
@@ -3,7 +3,7 @@ info:
   title: Free Courses Service API
   version: '1.0'
 servers:
-  - url: http://localhost:8080/v1
+  - url: http://localhost:8080/
 
 paths:
   /courses:
@@ -32,24 +32,24 @@ paths:
           required: false
           description: The maximum number of courses to be returned in a single page
         - in: query
-          name: startId
-          schema:
-            $ref: '#/components/schemas/CourseId'
-          required: false
-          description: The exclusive start id of the page of courses to be returned
-        - in: query
           name: difficulty
           schema:
             $ref: '#/components/schemas/CourseDifficulty'
           required: false
           description: The difficulty of the courses to be returned
+        - in: query
+          name: nextPageToken
+          schema:
+            $ref: '#/components/schemas/NextPageToken'
+          required: false
+          description: The token for the next page of courses to be returned (for the initial call this is null)
       responses:
         '200':
           description: The list of courses was returned successfully
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/CourseList'
+                $ref: '#/components/schemas/ListCoursesResponse'
     post:
       operationId: 'createCourse'
       requestBody:
@@ -126,7 +126,15 @@ components:
         subcategories:
           $ref: '#/components/schemas/SubcategoryList'
         source:
-          $ref: '#/components/schemas/CourseSource'
+          $ref: '#/components/schemas/CourseSourceString'
+      required:
+        - id
+        - description
+        - uri
+        - difficulty
+        - category
+        - subcategories
+        - source
     CourseList:
       title: CourseList
       type: array
@@ -148,19 +156,24 @@ components:
         subcategories:
           $ref: '#/components/schemas/SubcategoryList'
         source:
-          $ref: '#/components/schemas/CourseSource'
+          $ref: '#/components/schemas/CourseSourceString'
       required:
         - description
         - uri
+        - difficulty
         - category
-        - subcategory
+        - subcategories
         - source
     ListCoursesResponse:
       title: ListCoursesResponse
       type: object
       properties:
+        nextPageToken:
+          $ref: '#/components/schemas/NextPageToken'
         courses:
           $ref: '#/components/schemas/CourseList'
+      required:
+        - courses
     CourseDifficulty:
       title: CourseDifficulty
       type: string
@@ -169,6 +182,11 @@ components:
       title: CourseSource
       type: string
       enum: [ YOUTUBE, COURSERA, UDEMY ]
+    CourseSourceString:
+      type: string
+      pattern: '^[A-Z]*$'
+      minLength: 5
+      maxLength: 8
     CourseId:
       title: CourseId
       type: string
@@ -186,6 +204,8 @@ components:
         $ref: '#/components/schemas/Subcategory'
       minItems: 1
       maxItems: 5
+    NextPageToken:
+      type: string
     CourseNotFoundError:
       title: CourseNotFoundError
       type: object
@@ -206,4 +226,3 @@ components:
       properties:
         message:
           type: string
-
